# Cadernislang

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/cdc/: Cargo.toml
crates/cdc-ast/: Cargo.toml
crates/cdc-ast/src/: lib.rs
crates/cdc-codegen/: Cargo.toml
crates/cdc-codegen/src/: lib.rs  llvm.rs
crates/cdc-interp/: Cargo.toml
crates/cdc-interp/src/: lib.rs
crates/cdc-lexer/: Cargo.toml
crates/cdc-lexer/src/: lib.rs
crates/cdc-lsp/: Cargo.toml
crates/cdc-lsp/src/: analysis.rs  main.rs
crates/cdc-parser/: Cargo.toml
crates/cdc-parser/src/: lib.rs
crates/cdc-runtime/: Cargo.toml
crates/cdc-runtime/src/: cabi.rs  config.rs  lib.rs  patch.rs
crates/cdc-sema/: Cargo.toml
crates/cdc-sema/src/: lib.rs
crates/cdc/src/: main.rs
crates/cdc/tests/: acceptance.rs  cli.rs  cost.rs  native.rs  patch.rs  perso.rs
docs/: SPEC.md
docs/architecture/: ADR-001-suspicion-deux-couches.md  ADR-002-pin-llvm-18.md  ADR-003-cout-pa-auto-derive.md  ADR-004-lsp-tooling.md
editors/vscode/: README.md  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: cadernislang.tmLanguage.json
examples/: cooldown.cdl  dopeuls.cdl  dopeuls_ban.cdl  patch.cdl  perso.cdl  sans_entete.cdl  somme.cdl  trop_gourmand.cdl
