[package]
name = "cdc-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[features]
# Backend LLVM optionnel : exige LLVM 18 installé + LLVM_SYS_180_PREFIX (ADR-002).
llvm = ["dep:inkwell"]

[dependencies]
cdc-ast = { path = "../cdc-ast" }
cdc-runtime = { path = "../cdc-runtime" }
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
