[package]
name = "cdc-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# Backend natif par émission d'IR textuel compilé par `clang` (ADR-002) : aucune dépendance
# LLVM au build-time. `clang` n'est requis qu'au runtime de `cdc build`.
[dependencies]
cdc-ast = { path = "../cdc-ast" }
cdc-runtime = { path = "../cdc-runtime" }
cdc-sema = { path = "../cdc-sema" }
