[package]
name = "cdc-runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

# rlib pour interp/codegen (déps Cargo) + staticlib pour le link natif de `cdc build` (ADR-002).
[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
rand = "0.8"
