[package]
name = "cdc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cdc"
path = "src/main.rs"

[dependencies]
cdc-lexer = { path = "../cdc-lexer" }
cdc-parser = { path = "../cdc-parser" }
cdc-sema = { path = "../cdc-sema" }
cdc-interp = { path = "../cdc-interp" }
