[package]
name = "cdc"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "cdc"
path = "src/main.rs"

[features]
# Active le backend LLVM natif pour `cdc build` (exige LLVM 18, voir ADR-002).
llvm = ["cdc-codegen/llvm"]

[dependencies]
cdc-lexer = { path = "../cdc-lexer" }
cdc-parser = { path = "../cdc-parser" }
cdc-sema = { path = "../cdc-sema" }
cdc-interp = { path = "../cdc-interp" }
cdc-codegen = { path = "../cdc-codegen" }
